updating HTML after code validation

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 
     </div>
     <footer id="footer">Powered By
-        <img src="https://developers.giphy.com//static/img/dev-logo-lg.7404c00322a8.gif" />
+        <img src="https://developers.giphy.com//static/img/dev-logo-lg.7404c00322a8.gif" alt="Giphy Logo Image" />
     </footer>
-    <script type="text/javascript" src="assets/javascript/giphy.js"></script>
+    <script src="assets/javascript/giphy.js"></script>
 </body>
 
 </html>
