updated functionality of enter key press

--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
     <div id="content">
         <h1 id="heading">GIPHY Grabber</h1>
         <div id="display-buttons"></div>
-        <div id="form">
-            <form>
+        <div>
+            <form id="form">
                 <span>Name your gif:</span>
                 <input type="text" name="topics" id="newItem">
                 <br>
                 <br>
-                <input class="btn btn-primary btn-md" type="button" id="add-gif" value="Create New Gif">
+                <input class="btn btn-primary btn-md" type="submit" id="add-gif" value="Create New Gif">
             </form>
         </div>
         <div id="gifs"></div>
